[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "angle_emb"
version = "0.6.0"
description = "AnglE-optimize Text Embeddings"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "sean lee", email = "xmlee97@gmail.com" }
]
keywords = ["angle_emb"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bitsandbytes>=0.48.1",
    "boltons>=25.0.0",
    "datasets>=4.2.0",
    "einops>=0.8.1",
    "peft>=0.17.1",
    "prettytable>=3.16.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "transformers>=4.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
]
wandb = [
    "wandb",
]

[project.scripts]
angle-trainer = "angle_emb.angle_trainer:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]
